# CLGLJava

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  SETUP.md  Setup.md  TODO.md  Todo.md  build.gradle  gradle.properties  settings.gradle  vcpkg-configuration.json  vcpkg.json
buildSrc/: build.gradle
buildSrc/src/main/groovy/: buildsrc-plugin.gradle  ljgel.gradle
buildSrc/src/main/resources/llog/: llog.properties
buildSrc/src/main/resources/llog/multi/: sysout.properties
cvg4j-glslc-gradle-plugin/: build.gradle
cvg4j-glslc-gradle-plugin/src/main/java/de/linusdev/cvg4j/glslc/: GlslCGradlePlugin.java  GlslCTask.java
gradle/wrapper/: gradle-wrapper.properties
include/: JniUtils.h  clgl_CL.h  clgl_GLFW.h  clgl_GLFWWindow.h  clgl_Glad.h  clgl_Load.h  clgl_NativeUtils.h  clgl_Vulkan.h  clgl_WGL.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
shaders/test/: vulkanTest1.frag  vulkanTest3.frag  vulkanTest3.vert
src/main/cpp/: CL.cpp  GLFW.cpp  Glad.cpp  JniUtils.cpp  Load.cpp  NativeUtils.cpp  VulkanNatDebugUtilsMessageCallback.cpp  WGL.cpp  clgl_CL.cpp  clgl_GLFW.cpp  clgl_GLFWWindow.cpp  clgl_Glad.cpp  clgl_Load.cpp  clgl_NativeUtils.cpp  clgl_Vulkan.cpp  clgl_WGL.cpp
src/main/java/de/linusdev/clgl/api/async/: AsyncErrorTypes.java  GlobalAsyncManager.java
src/main/java/de/linusdev/clgl/api/structs/: CameraStruct.java  ComplexStructure.java  FixedElementSize.java  IllegalStructValueException.java  ModTrackingStructure.java  ModificationInfo.java  NativeArray.java  NativeParsable.java  PrimitiveTypeArray.java  Sizeable.java  StructValue.java  StructValueInfo.java  Structure.java  StructureArray.java  StructureInfo.java  StructureSettings.java
src/main/java/de/linusdev/clgl/api/types/: Float1.java  Float2.java  Float3.java  Float4.java  FloatN.java  FloatNxM.java  Int1.java  Int2.java  Int3.java  Int4.java  IntN.java  Long1.java  Long2.java  Long3.java  Long4.java  LongN.java  Matrix.java  VMath.java  Vector.java
src/main/java/de/linusdev/clgl/api/utils/: BufferUtils.java  Utils.java
src/main/java/de/linusdev/clgl/engine/: Engine.java  EngineImpl.java  EngineUtils.java  Game.java  HasEngine.java  Helper.java  Scene.java  SceneState.java  UIThread.java
src/main/java/de/linusdev/clgl/engine/ticker/: Tickable.java  Ticker.java
src/main/java/de/linusdev/clgl/nat/: Load.java  NativeUtils.java
src/main/java/de/linusdev/clgl/nat/cl/: CL.java  CLException.java  CLStatus.java
src/main/java/de/linusdev/clgl/nat/custom/: StaticCallbackObject.java  StaticCallbackObjects.java
src/main/java/de/linusdev/clgl/nat/glad/: GLConstants.java  GLError.java  GLException.java  Glad.java  GladInitException.java
src/main/java/de/linusdev/clgl/nat/glfw3/: ErrorCallback.java  GLFW.java  GLFWValues.java  GLFWWindow.java
src/main/java/de/linusdev/clgl/nat/loader/: LibraryLoader.java
src/main/java/de/linusdev/clgl/nat/wgl/: WGL.java
src/main/java/de/linusdev/clgl/window/: CLGLWindow.java  Handler.java
src/main/java/de/linusdev/clgl/window/args/: ArgumentInfo.java  AutoUpdateArgManager.java  AutoUpdateArgument.java  KernelView.java  ModifiableStructArgument.java
src/main/java/de/linusdev/clgl/window/input/: InputManagerImpl.java  InputManger.java  InputType.java  Key.java  KeyPressListener.java  KeyReleaseListener.java  MouseButton.java  PressListener.java  Pressable.java  PressableImpl.java  ReleaseListener.java  StandardMouseButton.java  TextInput.java
src/main/java/de/linusdev/clgl/window/queue/: QFuture.java  ReturnRunnable.java  UIRunnable.java  UITaskQueue.java  (+1 more)
src/main/java/de/linusdev/cvg4j/engine/: Engine.java  EngineImpl.java  EngineUtils.java  Game.java  HasEngine.java  RenderThread.java  Scene.java  SceneState.java  UIThread.java
src/main/java/de/linusdev/cvg4j/nat/: ABISelector.java  Load.java  NativeUtils.java  UnknownStruct.java
src/main/java/de/linusdev/cvg4j/nengine/: Engine.java  RenderThread.java
src/main/java/de/linusdev/cvg4j/window/: CLGLWindow.java  Handler.java
src/main/java/de/linusdev/ljgel/engine/: AbstractEngine.java  Engine.java  NativeInteropEngine.java
src/main/java/de/linusdev/ljgel/nat/: Load.java  NativeUtils.java  UnknownStruct.java
src/main/resources/: test.cl
src/main/resources/kernels/: loading-render.cl  loading-ui.cl
src/main/resources/native-libraries/: CLGLJava.jnilib  glad.lib  glfw3.lib  libCLGLJava.jnilib
src/test/glsl/test/: vulkanTest2.vert  vulkanTest3.frag
src/test/java/de/linusdev/clgl/: MainTest.java
src/test/java/de/linusdev/clgl/engine/: EngineTest.java  TestGame.java  TestScene.java
src/test/java/de/linusdev/cvg4j/: MainTest.java
src/test/java/de/linusdev/cvg4j/engine/: EngineTest.java  TestGame.java  TestScene.java
src/test/java/de/linusdev/cvg4j/vulkan/: VulkanTest.java  VulkanTransparentWindowTest.java
src/test/java/de/linusdev/ljgel/: MainTest.java
src/test/java/de/linusdev/ljgel/vulkan/: VulkanTest.java  VulkanTransparentWindowTest.java
src/test/resources/: ui.cl
src/test/resources/3drender/: render.cl  test.cl
src/test/resources/enginetest/: render.cl  ui.cl
src/test/resources/llog/: llog.properties
src/test/resources/llog/multi/: file.properties
src/test/resources/native-libraries/: CLGLJava.jnilib  glad.lib  glfw3.lib
(+654 files in other folders)
